fixed styles for anchor color, some spacing issues, and submit button

--- a/sayit/static_src/scss/_settings.scss
+++ b/sayit/static_src/scss/_settings.scss
@@ -58,6 +58,7 @@ $gun: #2D3047;
 
 $purple: #9068BE;
 $blue: #6ED3CF;
+$blue-links: #108783;
 $red: #f86759;
 $pink: #FFC6D9;
 $dark-gray: #404D4F;
@@ -195,8 +196,8 @@ $header-color: $black;
 // $code-background: $light-gray;
 // $code-border: 1px solid $medium-gray;
 // $code-padding: rem-calc(2 5 1);
-// $anchor-color: $primary-color;
-// $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
+$anchor-color: $blue-links;
+$anchor-color-hover: scale-color($anchor-color, $lightness: -30%);
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
 // $hr-width: $global-width;
@@ -292,9 +293,9 @@ $header-color: $black;
 // $button-padding: 0.85em 1em;
 // $button-margin: 0 0 $global-margin 0;
 // $button-fill: solid;
-// $button-background: $primary-color;
-// $button-background-hover: scale-color($button-background, $lightness: -15%);
-// $button-color: $white;
+$button-background: $light-gray;
+$button-background-hover: scale-color($button-background, $lightness: -20%);
+$button-color: $body-font-color;
 // $button-color-alt: $black;
 // $button-radius: $global-radius;
 // $button-sizes: (
